@startuml Modelo_Dominio_Final

    '-- ACOMODAR Y LIMPIAR EL MODELO --
    
    hide circle
    hide methods

    '-- CLASES -> PERSONAS --

    'Clase Padre Principal
    class Usuario {
        cédula
        nombre
        email
        clave
    }

    'Diferentes tipos de Usuarios
    Class Estudiante {
        carrera
        carnet
        constancia
    }

    Class Empleado {
        id_empleado
        sector
        profesión
    }

    Class Administrador {
        responsabilidad
    }

    '-- CLASES -> COMEDOR

    ' Menu que rota semanalmente
    class Menu {
        'Tipo de contenido clasifica: Desayuno, almuerzo, cena
        tipo_contenido
        información_nutricional
        inicio
        fin
    }

    ' Insumo que llega para preparar los platillos
    class Insumo {
        nombre
        cantidad_disponible
        fecha_vencimiento
        proveedor
    }

    ' Comida hecha de los insumos la cual se mostrará como opción en el menú
    class Platillo {
        nombre
        id_Platillo
        contenido
    }

    ' Turno en los cuales las comidas cambian y abren nuevas capacidades para personas
    class Turno {
        inicio
        'Disponibilidad o no
        estado
        final
        capacidad_max
    }

    ' Reporte que el Administrador realiza en donde figura consumo diario, reportes de demanda y planificación
    class Reporte {
        fecha_generación
        datos
    }

    ' Reserva que realiza un Usuario durante un Turno
    class Reserva {
        horario_reservado
        'El estado refiere si está vigente, cancelada o ya ha sido canjeada
        estado
        'Código que verifica que el usuario fue quien obtuvo el platillo
        clave_acceso
    }

    ' --- RELACIONES ---

    ' Herencia
    Estudiante --|> Usuario
    Empleado --|> Usuario
    Administrador --|> Usuario

    ' El Administrador gestióna menús semanales, insumos y genera reportes 
    Administrador "1" --> "*" Menu : gestióna
    Administrador "1" --> "*" Insumo : gestióna
    Administrador "1" --> "*" Reporte : genera

    ' Un menú se compone de varios platillos disponibles para esa semana 
    Menu "1" *-- "1..*" Platillo : contiene
    
    ' Un platillo requiere insumos para prepararse
    Platillo "*" o-- "1..*" Insumo : preparado_con

    ' El usuario hace la reserva, una por persona
    Usuario "1" --> "1" Reserva : realiza

    ' Una reserva corresponde a un Turno específico, controla el acceso 
    Reserva "*" --> "1" Turno : para

    ' Una reserva suele ser por un platillo
    Reserva "*" --> "1" Platillo : incluye

    ' El reporte se basa en los datos de las reservas/consumos y el inventario 
    Reporte --> Reserva : analiza_demanda
    Reporte --> Insumo : analiza_stock

@enduml
